Added more questionnaires and SAM

--- a/app/SpaceOddity/templates/instructions/debrief.html
+++ b/app/SpaceOddity/templates/instructions/debrief.html
@@ -6,8 +6,10 @@
     Our goals are:
 </p>
 <ul>
-    <li>To determine if self-efficacy supporting features increase players' self-efficacy in Space Oddity, video games, and life.</li>
-    <li>To determine if self-efficacy supporting features affect Player Experience in regards to enjoyment and self-determination.</li>
+    <li>To determine whether self-efficacy supporting features increase players' self-efficacy in Space Oddity, video games, and life.</li>
+    <li>To determine whether self-efficacy supporting features affect player experience in terms of enjoyment.</li>
+    <li>To determine whether self-efficacy supporting features affect players' competence, relatedness, and autonomy.</li>
+    <li>To determine whether self-efficacy supporting features affect players' dominance.</li>
 </ul>
 
 
